--- a/templates/register.html
+++ b/templates/register.html
@@ -14,7 +14,10 @@
   </head>
   <body>
     <h1>Register</h1>
-    <form method="POST">
+    <form
+      method="POST"
+      action="/register"
+    >
       Username
       <input
         type="text"
